# Generated by Django 2.2 on 2019-05-09 09:37

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('translation', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Dataset',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True)),
                ('modified', models.DateTimeField(auto_now=True)),
                ('layer_name', models.CharField(max_length=512)),
                ('chargeable', models.BooleanField(default=False)),
                ('abstract', models.OneToOneField(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='dataset_abstract', to='translation.TranslationKey', verbose_name='abstract')),
                ('description', models.OneToOneField(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='dataset_description', to='translation.TranslationKey', verbose_name='description')),
                ('short_description', models.OneToOneField(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='dataset_short_description', to='translation.TranslationKey', verbose_name='short_description')),
            ],
        ),
        migrations.CreateModel(
            name='Tileset',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created', models.DateTimeField(auto_now_add=True)),
                ('modified', models.DateTimeField(auto_now=True)),
                ('format', models.CharField(choices=[('png', 'png'), ('jpeg', 'jpeg')], default='png', max_length=10)),
                ('cache_ttl', models.PositiveIntegerField(default=1800, help_text="Cache 'time to live'")),
                ('resolution_min', models.DecimalField(decimal_places=2, default=4000.0, max_digits=7)),
                ('resolution_max', models.DecimalField(decimal_places=2, default=0.25, max_digits=7)),
                ('published', models.BooleanField(default=True)),
                ('dataset', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='layers.Dataset')),
            ],
        ),
    ]
